作成済みステージのナビを共通化

--- a/stages/index.html
+++ b/stages/index.html
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="post rad_corner">
-                    <h2 class="dot rad_corner">テストコース</h2>
+                    <h2 class="dot rad_corner" id="test_course">テストコース</h2>
                         <h3><a href="test_20">マニュアル ドライブ</a></h3>
                         <h3><a href="test_31">日本語 ブロック</a></h3>
                         <h3><a href="test_30">English Block</a></h3>
@@ -79,7 +79,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- ===================== START FOOTER ===================== -->
     <div class="clear"></div>
     <div id="footer" class="clearfix">
