--- a/tech.html
+++ b/tech.html
@@ -129,19 +129,13 @@
                         <a href='http://itouhiro.hatenablog.com/entry/20130602/font' target='_blank'>http://itouhiro.hatenablog.com/entry/20130602/font</a>
                     </p>
 
-                    <h3 id="PANICPUMPKIN">PANICPUMPKIN</h3>
-                    <p>効果音</p>
-                    <p>Copyright PANICPUMPKIN</p>
+                    <h3 id="Music_is_VFR">Music is VFR</h3>
+                    <p>効果音:アクションゲーム用セット GBアクション01</p>
+                    <p>Copyright 2012-2018 Music is VFR All Rights Reserved.</p>
                     <p>
-                        <a href='http://pansound.com/panicpumpkin/' target='_blank'>http://pansound.com/panicpumpkin/</a>
+                        <a href='http://musicisvfr.com/' target='_blank'>http://musicisvfr.com/</a>
                     </p>
 
-                    <h3 id="TairaKomori">Taira Komori</h3>
-                    <p>効果音</p>
-                    <p>Copyright Taira Komori</p>
-                    <p>
-                        <a href='http://taira-komori.jpn.org/' target='_blank'>http://taira-komori.jpn.org/</a>
-                    </p>
                 </div>
 
                 <div class="post rad_corner">
