--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div class="jumbotron">
         <div class="container">
-            <img class="pull-left img-responsive" src="images/heppo_image.png" width="300" height="300" style='padding:0;margin:0 40px 40px 0;'>
+            <img class="pull-left img-responsive" src="assets/images/heppo_image.png" width="300" height="300" style='padding:0;margin:0 40px 40px 0;'>
             <div class="text-center">
                 <h1 class="jumbotron-heading"><strong>はしれ！ヘッポコード</strong> -
                  ただいま工事中</h1>
@@ -67,21 +67,21 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="mx-auto text-center">
-                    <img class="img-responsive" src="images/p1.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
+                    <img class="img-responsive" src="assets/images/p1.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
                     <h2><strong>組み立てる</strong></h2>
                     <p>ブロック型エディタで<br>コードを組み立て</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mx-auto text-center">
-                    <img class="img-responsive" src="images/p2.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
+                    <img class="img-responsive" src="assets/images/p2.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
                     <h2><strong>走らせる</strong></h2>
                     <p>横スクロール型コースで<br>ロボットを走らせろ</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mx-auto text-center">
-                    <img class="img-responsive" src="images/p3.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
+                    <img class="img-responsive" src="assets/images/p3.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
                     <h2><strong>競争する</strong></h2>
                     <p>コースやライバルが<br>どんどん増えるゾ</p>
                 </div>
