--- a/tech.html
+++ b/tech.html
@@ -131,7 +131,7 @@
 
                     <h3 id="Music_is_VFR">Music is VFR</h3>
                     <p>効果音:アクションゲーム用セット GBアクション01</p>
-                    <p>Copyright 2012-2018 Music is VFR All Rights Reserved.</p>
+                    <p>Copyright 2012-2018 Music is VFR All Rights Reserved. CC-BY-4.0</p>
                     <p>
                         <a href='http://musicisvfr.com/' target='_blank'>http://musicisvfr.com/</a>
                     </p>
