効果音を追加

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p>
                     <button type="button" class="btn btn-warning btn-lg" onclick="location.href='stages/'"><strong> スタート »</strong></button>
                 </p>
-                <p><a href="https://github.com/ycatch/heppo-code-running">GitHub</a></p>
+                <p><a href="https://github.com/ycatch/heppo-code-running" target="_blank">GitHub</a></p>
                 <br class='clearfix'>
             </div>
         </div>
