--- a/tech.html
+++ b/tech.html
@@ -130,7 +130,7 @@
                     </p>
 
                     <h3 id="Music_is_VFR">Music is VFR</h3>
-                    <p>効果音:アクションゲーム用セット GBアクション01</p>
+                    <p>効果音:ゲーム用セット GBアクション01, GB汎用02</p>
                     <p>Copyright 2012-2018 Music is VFR All Rights Reserved. CC-BY-4.0</p>
                     <p>
                         <a href='http://musicisvfr.com/' target='_blank'>http://musicisvfr.com/</a>
